--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculator">
-        <div class="display" style="border: solid 1px black; font-family: monospace;"></div>
+        <div class="display">Hello</div>
+        <div class="buttons">
             <button onclick="appendToScreen(1)">1</button>
             <button onclick="appendToScreen(2)">2</button>
             <button onclick="appendToScreen(3)">3</button>
@@ -26,6 +28,7 @@
             <button class="equalsButton">=</button>
             <button onclick="deleteNumber()">X</button>
             <button class="clear">clear</button>
+        </div>
     </div>
 
 <script>
